search box styling and fix for drupal login and mega menu overlap

--- a/web/themes/custom/myusf/sass/src/partials/_forms.scss
+++ b/web/themes/custom/myusf/sass/src/partials/_forms.scss
@@ -232,3 +232,12 @@ li.entitywebformsettings {
   display: none;
 }
 
+
+/* USER LOGIN (fix for overlapping with megameu)
+================================================ */
+
+.user-login-form {
+	.form-control:focus {
+		z-index: 1;
+	}
+}
